--- a/style.css
+++ b/style.css
@@ -1,21 +1,230 @@
-:root{
-    --background-color-title: #FF0070;
-    --text-color-title-focus: #DB00FF;
-    --text-color-title-block: #FF0070;
-    --color-link: #FF0070;
-    --text-color-title-type-3: #000028;
-    --text-color-paragraf: #F1B2CE;
-    --background-color: #000028;
-    --background-image: url("../img/cover-image-dark.svg");
-    --opacity_blub: 1;
+@font-face{
+    font-family: 'IBM Plex Mono';
+    src: url('./fonts/IBMPlexMono-Regular.ttf');
+    font-weight: normal;
   }
-  @font-face {
-      font-weight: 700;
-      font-family: IBMPlexMono;
-      src: url("../fonts/IBMPlexMono-Bold.ttf");
+  
+  @font-face{
+    font-family: 'IBM Plex Mono';
+    src: url('./fonts/IBMPlexMono-Bold.ttf');
+    font-weight: bold;
   }
-  @font-face {
-      font-weight: 400;
-      font-family: IBMPlexMono;
-      src: url("../fonts/IBMPlexMono-Regular.ttf");  
-}
+  
+  
+  html{
+    box-sizing: border-box;
+  }
+  
+  body{
+    background-color: #000028;
+    display: flex;
+    justify-content: center;
+  }
+  
+  .container{
+    max-height: max-content;
+    margin: 0;
+    position: relative;
+  }
+  
+  .header{
+    position: relative;
+    width: 1024px;
+    height: 768px;
+    background-image: url(https://s3-alpha-sig.figma.com/img/dfd0/bdda/b7b566964fd701840768cd9eecd5ea42?Expires=1729468800&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=ADGkT7zF6jvk3rAiHXP3HkgCPUyxNV-gNgc9WULpkx5gOGcDsVOESATml~WECKtjIS-3F1C2OEt5UvHm9RRk8dVd-UXPErUwoJrtVg2bGKE7CFIPmP5x1hUVfjt-LBPZGS~QggWyIF3JhKH78W~PEsxPby25jChChFv2MTv8c7vZ1Ft5a2ZrjgqWpd7zWsRVsjINMk4fsv2UCJxoeCwcEYD4YGyd43wMuBK7p5wUAB8tdCgjGi6aXSvRHRnz~N4kUcPyGTxL5sFLVJq9yqTXHDwSSoPJpgsOzdyf2cN~rv2KbakKVOXB2Wm2gFHoShr6Mn4eg9uXxz21-JhqdrkP1g__);
+    background-size: 1229px 768px;
+    background-position-x: -102px;
+  }
+  
+  
+  
+  .navigation {
+    display: flex;
+    position: relative;
+    justify-content: center;
+    top: 20px;
+    left: 397px;
+    width: 230px;
+    height: 26px;
+    list-style-type: none;
+  }
+  
+  .navigation button{
+    width: 70px;
+    height: 26px;
+    padding-right: 13px;
+    padding-left: 13px;
+    font-family: "IBM Plex Mono";
+    color: #FF0070;
+    line-height: 18px;
+    text-align: center;
+    size: 18px;
+    font-weight: 400;
+    background-color: rgba(28,28,28,0);
+    border: none;
+    outline: none;
+    cursor: pointer;
+  
+  }
+  
+  button:active {
+    border: 1px solid #FF0070;
+  }
+  
+  button:hover {
+    border: 1px solid #FF0070;
+  }
+  
+  .header .KNPK2 {
+    position: absolute ;
+    top: 723px;
+    left: 20px;
+    margin: 0px;
+    width: 25px;
+    height: 25px;
+    max-width: 25px;
+    border-width: 0px 0px 1px 1px;
+    border-style: solid;
+    border-color: #FF0070;
+    
+  }
+  
+  .header .KNPK3 {
+    position:absolute;
+    top: 20px;
+    left: 979px;
+    margin: 0px;
+    width: 25px;
+    height: 25px;
+    max-width: 25px;
+    border-width: 1px 1px 0px 0px ;
+    border-style: solid;
+    border-color: #FF0070;
+  }
+  
+  
+  
+  
+  .header .KNPK1{
+    position: absolute;
+    width: 9px;
+    height: 9px;
+    top: 28px;
+    left: 986px;
+    background: #FF0070;
+    border-radius: 100%;
+  
+    box-shadow: 0 0 4px 2px #ff0070;
+  
+  }
+  
+  .header .knpkREC {
+    position: absolute;
+    width: 33px;
+    height: 26px;
+    left: 943px;
+    top: 20px;
+    margin: 0px;
+  
+    font-family: 'IBM Plex Mono';
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 25px;
+  
+    text-align: center;
+  
+    color: #FF0070;
+  }
+  
+  
+  h1{
+    position: absolute;
+    top: 319px;
+    width: 759px;
+    height: 130px;
+    font-family: 'IBM Plex Mono';
+    font-weight: bold;
+    font-size: 157px;
+    line-height: 129.53px;
+    color: #DB00FF;
+    margin: 0px;
+    text-shadow: 4px 4px 0px #FF0070;
+  }
+  
+  .p1{
+    position: relative;
+    top: 563px;
+    left: 513px;
+    right: 20px;
+    bottom: 134px;
+    width: 491px;
+    height: 71px;
+    font-family: 'IBM Plex Mono';
+    font-weight: bold;
+    font-size: 18px;
+    line-height: 23.4px;
+    background-color: #FF0070;
+    color: #000028;
+  }
+  
+  .main{
+  
+    width: 1024px;
+    height: 3352px;
+    top: 828px;
+    gap: 0px;
+    opacity: 0px;
+  
+  }
+  
+  .section1 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 0px;
+    
+    
+    position: absolute;
+    width: 1024px;
+    height: 508px;
+    left: 0px;
+    top: 828px;
+  }
+  
+  
+  .section1 .MCRtxt{
+    position: absolute;
+    width: 314.96px;
+    height: 47px;
+    left: 20px;
+    top: 0px;
+  
+    font-family: 'IBM Plex Mono';
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 23px;
+    color: #FF0070;
+  }
+  .section1 .MCRtxt2{
+    position: absolute;
+    width: 648.92px;
+    height: 23px;
+    right: 20.19px;
+    top: 0px;
+    
+    font-family: 'IBM Plex Mono';
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 23px;
+    background-color: #FF0070;
+    
+    color: #000028;
+  
+  }
+  
+  .section1 .BIGtxt{
+    position: absolute;
+    width: 648.92px;
+    height: 211px;
+    right: 20
+  }
