--- a/style.css
+++ b/style.css
@@ -75,7 +75,7 @@
     border: 1px solid #FF0070;
   }
   
-  .header .KNPK2 {
+  .header .Knp2 {
     position: absolute ;
     top: 723px;
     left: 20px;
@@ -89,7 +89,7 @@
     
   }
   
-  .header .KNPK3 {
+  .header .Knp3 {
     position:absolute;
     top: 20px;
     left: 979px;
@@ -105,7 +105,7 @@
   
   
   
-  .header .KNPK1{
+  .header .Knp1{
     position: absolute;
     width: 9px;
     height: 9px;
@@ -118,7 +118,7 @@
   
   }
   
-  .header .knpkREC {
+  .header .knopkaREC {
     position: absolute;
     width: 33px;
     height: 26px;
