--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@
   }
   
   .header{
-    position: relative;
+    position: absolute;
     width: 1024px;
     height: 768px;
     background-image: url('./image/cover-image-dark.png');
@@ -167,7 +167,7 @@
     color: #000028;
   }
   
-  .main{
+  .header{
   
     width: 1024px;
     height: 3352px;
