--- a/style.css
+++ b/style.css
@@ -10,11 +10,15 @@
     font-weight: bold;
   }
   
-  
-  html{
-    box-sizing: border-box;
+  .header{
+    position: relative;
+    width: 1024px;
+    height: 768px;
+    background-image: url('./image/cover-image-dark.png');
+    background-size: 1229px 768px;
+    background-position-x: -102px;
   }
-  
+
   body{
     background-color: #000028;
     display: flex;
@@ -26,17 +30,6 @@
     margin: 0;
     position: relative;
   }
-  
-  .header{
-    position: absolute;
-    width: 1024px;
-    height: 768px;
-    background-image: url('./image/cover-image-dark.png');
-    background-size: 1229px 768px;
-    background-position-x: -102px;
-  }
-  
-  
   
   .navigation {
     display: flex;
@@ -75,7 +68,7 @@
     border: 1px solid #FF0070;
   }
   
-  .header .Knp2 {
+  .Knp2 {
     position: absolute ;
     top: 723px;
     left: 20px;
@@ -89,7 +82,7 @@
     
   }
   
-  .header .Knp3 {
+  .Knp3 {
     position:absolute;
     top: 20px;
     left: 979px;
@@ -102,10 +95,7 @@
     border-color: #FF0070;
   }
   
-  
-  
-  
-  .header .Knp1{
+  .Knp1{
     position: absolute;
     width: 9px;
     height: 9px;
@@ -118,7 +108,7 @@
   
   }
   
-  .header .knopkaREC {
+  .knopkaREC {
     position: absolute;
     width: 33px;
     height: 26px;
@@ -135,7 +125,6 @@
   
     color: #FF0070;
   }
-  
   
   h1{
     position: absolute;
@@ -165,16 +154,6 @@
     line-height: 23.4px;
     background-color: #FF0070;
     color: #000028;
-  }
-  
-  .header{
-  
-    width: 1024px;
-    height: 3352px;
-    top: 828px;
-    gap: 0px;
-    opacity: 0px;
-  
   }
   
   .section1 {
