--- a/style.css
+++ b/style.css
@@ -1,117 +1,152 @@
-@font-face{
-    font-family: 'IBM Plex Mono';
-    src: url('./fonts/IBMPlexMono-Regular.ttf');
-    font-weight: normal;
-  }
-  
-  @font-face{
-    font-family: 'IBM Plex Mono';
-    src: url('./fonts/IBMPlexMono-Bold.ttf');
-    font-weight: bold;
-  }
-  
-  .header{
-    position: relative;
-    width: 1024px;
-    height: 768px;
-    background-image: url('./image/cover-image-dark.png');
-    background-size: 1229px 768px;
-    background-position-x: -102px;
-  }
+@font-face {
+  font-family: "IBM Plex Mono";
+  src: url("./fonts/IBMPlexMono-Regular.ttf");
+  font-weight: normal;
+}
 
-  body{
-    background-color: #000028;
-    display: flex;
-    justify-content: center;
-  }
-  
-  .container{
-    max-height: max-content;
-    margin: 0;
-    position: relative;
-  }
-  
-  .navigation {
-    display: flex;
-    position: relative;
-    justify-content: center;
-    top: 20px;
-    left: 397px;
-    width: 230px;
-    height: 26px;
-    list-style-type: none;
-  }
-  
-  .navigation button{
-    width: 70px;
-    height: 26px;
-    padding-right: 13px;
-    padding-left: 13px;
-    font-family: "IBM Plex Mono";
-    color: #FF0070;
-    line-height: 18px;
-    text-align: center;
-    size: 18px;
-    font-weight: 400;
-    background-color: rgba(28,28,28,0);
-    border: none;
-    outline: none;
-    cursor: pointer;
-  
-  }
-  
-  button:active {
-    border: 1px solid #FF0070;
-  }
-  
-  button:hover {
-    border: 1px solid #FF0070;
-  }
-  
-  .REC {
-    position: absolute;
-    width: 33px;
-    height: 26px;
-    left: 943px;
-    top: 20px;
-    margin: 0px;
-  
-    font-family: 'IBM Plex Mono';
-    font-weight: 400;
-    font-size: 18px;
-    line-height: 25px;
-  
-    text-align: center;
-  
-    color: #FF0070;
-  }
-  
-  h1{
-    position: absolute;
-    top: 319px;
-    width: 759px;
-    height: 130px;
-    font-family: 'IBM Plex Mono';
-    font-weight: bold;
-    font-size: 157px;
-    line-height: 129.53px;
-    color: #DB00FF;
-    margin: 0px;
-    text-shadow: 4px 4px 0px #FF0070;
-  }
-  
-  .p1{
-    position: relative;
-    top: 563px;
-    left: 513px;
-    right: 20px;
-    bottom: 134px;
-    width: 491px;
-    height: 71px;
-    font-family: 'IBM Plex Mono';
-    font-weight: bold;
-    font-size: 18px;
-    line-height: 23.4px;
-    background-color: #FF0070;
-    color: #000028;
-  }
+@font-face {
+  font-family: "IBM Plex Mono";
+  src: url("./fonts/IBMPlexMono-Bold.ttf");
+  font-weight: bold;
+}
+
+.header {
+  position: relative;
+  width: 1024px;
+  height: 768px;
+  background-image: url("./image/cover-image-dark.png");
+  background-size: 1229px 768px;
+  background-position-x: -102px;
+}
+
+body {
+  background-color: #000028;
+  display: flex;
+  justify-content: center;
+}
+
+.container {
+  max-height: max-content;
+  margin: 0;
+  position: relative;
+}
+
+.navigation {
+  display: flex;
+  position: relative;
+  justify-content: center;
+  top: 20px;
+  left: 397px;
+  width: 230px;
+  height: 26px;
+  list-style-type: none;
+}
+
+.navigation button {
+  width: 70px;
+  height: 26px;
+  padding-right: 13px;
+  padding-left: 13px;
+  font-family: "IBM Plex Mono", sans-serif;
+  color: #ff0070;
+  line-height: 18px;
+  text-align: center;
+  font-weight: 400;
+  font-size: 18px;
+  background-color: rgba(28, 28, 28, 0);
+  border: none;
+  outline: none;
+  cursor: pointer;
+}
+
+.isActiveButton,
+button:hover {
+  border: 1px solid #ff0070 !important;
+}
+
+.rec-wrapper {
+  position: absolute;
+  display: flex;
+  align-items: center;
+  height: 26px;
+  width: 58px;
+  left: 943px;
+  top: 20px;
+  margin: 0;
+
+  font-family: "IBM Plex Mono", sans-serif;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 25px;
+
+  text-align: center;
+  color: #ff0070;
+}
+
+.border1 {
+  width: 25px;
+  height: 25px;
+  top: -1;
+  left: 30px;
+  border: 1px solid;
+  border-bottom: #ff0070;
+  border-left: #ff0070;
+  position: absolute;
+}
+
+.border2 {
+  width: 25px;
+  height: 25px;
+  top: 702px;
+  right: 958px;
+  border: 1px solid;
+  border-top: #ff0070;
+  border-right: #ff0070;
+  position: absolute;
+}
+
+h1 {
+  position: absolute;
+  top: 319px;
+  width: 759px;
+  height: 130px;
+  font-family: "IBM Plex Mono", sans-serif;
+  font-weight: bold;
+  font-size: 157px;
+  line-height: 129.53px;
+  color: #db00ff;
+  margin: 0;
+  text-shadow: 4px 4px 0px #ff0070;
+}
+
+.p1 {
+  position: relative;
+  top: 535px;
+  left: 513px;
+  right: 20px;
+  bottom: 134px;
+  width: 491px;
+  height: 71px;
+  font-family: "IBM Plex Mono", sans-serif;
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 23.4px;
+  background-color: #ff0070;
+  color: #000028;
+}
+
+.REC {
+  margin: 0;
+}
+.ellipse {
+  position: absolute;
+  right: 0;
+
+  width: 9px;
+  height: 9px;
+  top: 28;
+  background-color: #ff0070;
+  box-shadow: 0px 0px 4px 2px rgba(255, 0, 112, 1);
+  border-radius: 50%;
+  margin-right: 10px;
+}
